<resources>
    <string name="app_name">Aktivio</string>
    <string name="onboarding_title">Revolutionize\nYour Exercise</string>
    <string name="onboarding_desc">It’s time to make a <b>healthier you</b> with a <b>personalized plan</b> based on your <b>preferences</b>.</string>
    <string name="get_started">Get Started</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="login_desc">Welcome back fellas! Let’s go back to the <b>healthier way</b> of you shall we?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="redirect_register">Don\'t have an account? <b>Register here</b></string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_desc">Hi! It’s a great you want to start. <b>Let’s get your healthiness back!</b></string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_redirect">Already have an account? <b>Login here</b></string>
    <string name="placeholder_title">Judul</string>
    <string name="placeholder_desc">Deskripsi</string>
    <string name="placholder_type">Post-Regis</string>
    <string name="next">Next</string>
    <string name="post_regis">Complete Registration</string>
    <string name="survey_plan">Survey Plan</string>
    <string name="register">Register</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_with_google">Login with Google</string>
    <string name="points">1576 Points</string>
    <string name="level">Level 16</string>
    <string name="btn_redeem">Redeem Your Points</string>
    <string name="take_survey_again">Change Personalization</string>
    <string name="achievements">Achievements</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="connect">Connect</string>
    <string name="exercise">Exercise</string>
    <string name="dietary">Dietary</string>
    <string name="profile">Profile</string>
    <string name="welcomingtext">You will <b>answer some questions</b> that will help you to get your exercise <b>recommendations</b> to make a\n<b>healthier you.</b></string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="see_exercise_plan">See Exercise Plan</string>
    <string name="onboardresult">Our <b>AI</b> had deciding and <b>planning</b> for your <b>best exercise</b> and <b>dietary</b>\nthat you need.</string>
    <string name="today_s_meal">Meal History</string>
    <string name="tanggal">Tanggal</string>
    <string name="daily_nutrition">Daily Nutrition</string>
    <string name="daily_nutrition_needs">Daily nutrition needs</string>
    <string name="dietary_title">Instantly Uncover Food Calories!</string>
    <string name="dietary_desc">Tap to Scan and Get Accurate Nutrition Information.</string>
    <string name="dietary_fragment">Dietary Fragment</string>
    <string name="onboardresultplan"><![CDATA[Your Plan is Ready\n<red>Let’s Start!<red>]]></string>
    <string name="resulttext">Here’s result, Your <b>BMR</b> is</string>
    <string name="have_you_doing_exercise_today">Have you doing exercise today?</string>
</resources>