<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/outline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/connect"
        android:icon="@drawable/affiliate"
        android:title="@string/connect" />
    <item
        android:id="@+id/exercise"
        android:icon="@drawable/baseline_directions_run_24"
        android:title="@string/exercise" />
    <item
        android:id="@+id/dietary"
        android:icon="@drawable/salad"
        android:title="@string/dietary" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/outline_account_circle_24"
        android:title="@string/profile" />
</menu>