<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.auth.OnboardingActivity"
    android:padding="50dp">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/onboarding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/onboarding_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/onboarding_title"
        android:textAlignment="center"
        android:fontFamily="@font/poppins_bold"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/iv_logo" />

    <TextView
        android:id="@+id/onboarding_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/onboarding_desc"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/onboarding_title" />

    <Button
        android:id="@+id/btn_get_started"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/get_started"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:background="@drawable/bg_button_primary"
        app:icon="@drawable/baseline_directions_run_24"
        app:iconGravity="textStart"
        app:iconSize="20dp"
        app:iconPadding="8dp"
        app:layout_constraintTop_toBottomOf="@id/onboarding_desc"
        tools:layout_editor_absoluteX="50dp" />

    <Button
        android:id="@+id/btn_login"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:iconSize="20dp"
        android:text="@string/btn_login"
        app:iconGravity="textStart"
        android:textColor="@color/white"
        android:background="@drawable/bg_button_secondary"
        app:icon="@drawable/baseline_login_24"
        android:drawableTint="#FFE86766"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/btn_get_started" />



</androidx.constraintlayout.widget.ConstraintLayout>