<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.auth.RegisterActivity"
    android:fitsSystemWindows="true"
    android:background="@drawable/bg_register">

    <androidx.cardview.widget.CardView
        android:id="@+id/progress_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="#55000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.mikhaellopez.circularprogressbar.CircularProgressBar
            android:id="@+id/circularProgressBar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            app:cpb_background_progressbar_color="@color/red_50"
            app:cpb_background_progressbar_width="5dp"
            app:cpb_progress_direction="to_right"
            app:cpb_progressbar_color="@color/red_500"
            app:cpb_progressbar_width="10dp"
            app:cpb_round_border="true" />

    </androidx.cardview.widget.CardView>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:orientation="vertical"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="90dp">

                <TextView
                    android:id="@+id/register_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/btn_register"
                    android:textColor="@color/white"
                    android:textSize="32sp" />

                <TextView
                    android:id="@+id/register_desc"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="2dp"
                    android:text="@string/register_desc"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/auth_container"
                android:orientation="vertical"
                android:paddingHorizontal="32dp"
                android:paddingTop="16dp"
                android:paddingBottom="48dp">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/DefaultInputBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/email"
                    android:textColorHint="@color/border"
                    android:focusable="true"
                    app:boxBackgroundMode="outline"
                    app:boxStrokeColor="@color/bg_default_input">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/outline_email_24"
                        android:drawablePadding="16dp"
                        android:drawableTint="@color/red500"
                        android:inputType="textEmailAddress"
                        android:fontFamily="@font/poppins_medium"
                        android:padding="16dp"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/DefaultInputBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColorHint="@color/border"
                    android:focusable="true"
                    app:boxStrokeColor="@color/bg_default_input"
                    app:boxBackgroundMode="outline"
                    >

                    <EditText
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#BEBEBE"
                        android:drawableStart="@drawable/baseline_person_outline_24"
                        android:drawablePadding="16dp"
                        android:drawableTint="@color/red500"
                        android:fontFamily="@font/poppins_medium"
                        android:hint="@string/username"
                        android:inputType="textEmailAddress"
                        android:padding="16dp"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/DefaultInputBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:boxBackgroundMode="outline"
                    android:textColorHint="@color/border"
                    android:focusable="true"
                    app:boxStrokeColor="@color/bg_default_input"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#BEBEBE"
                        android:drawableStart="@drawable/baseline_lock_outline_24"
                        android:drawablePadding="16dp"
                        android:drawableTint="@color/red500"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:fontFamily="@font/poppins_medium"
                        android:padding="16dp"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/DefaultInputBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:boxBackgroundMode="outline"
                    android:textColorHint="@color/border"
                    android:focusable="true"
                    app:boxStrokeColor="@color/bg_default_input"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/et_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#BEBEBE"
                        android:drawableStart="@drawable/baseline_lock_outline_24"
                        android:drawablePadding="16dp"
                        android:drawableTint="@color/red500"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:fontFamily="@font/poppins_medium"
                        android:padding="16dp"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/cb_remember_me"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/remember_me"
                        android:fontFamily="@font/poppins"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/btn_forgotPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/forgot_password"
                        android:textColor="@color/red500"
                        android:fontFamily="@font/poppins"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_button_primary"
                    android:drawableTint="#FFF"
                    android:paddingVertical="12dp"
                    android:text="@string/register"
                    style="@style/ButtonTextLight"
                    app:icon="@drawable/baseline_login_24"
                    app:iconGravity="textStart"
                    app:iconSize="20dp" />

                <TextView
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/login_redirect"
                    android:textAlignment="center" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
