<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.survey.WelcomeActivity"
    android:background="@drawable/bg_default"
    >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="match_parent"
            android:layout_height="315dp"
            android:src="@drawable/img_onboarding" />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TitleTextSurvey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_title"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/onboarding_desc"
            style="@style/DescTextSurvey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="3dp"
            android:text="@string/welcomingtext"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnLetStart"
            style="@style/ButtonTextLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_button_primary"
            android:paddingVertical="12dp"
            android:text="@string/let_s_start"
            app:icon="@drawable/round_arrow_forward_24"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconSize="20dp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>